--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ai": "^4.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^0.7.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "lucide-react": "^0.462.0",
